cmake_minimum_required(VERSION 3.24)
project(Chapter7)

set(CMAKE_CXX_STANDARD 17)


add_executable(01-1 01-1.cpp)
add_executable(01-2 01-2.cpp)
add_executable(02-1 02-1.cpp)
add_executable(02-2 02-2.cpp)
add_executable(03 03.cpp)
add_executable(04 04.cpp)
add_executable(05-1 05-1.cpp)
add_executable(05-2 05-2.cpp)
add_executable(06-1 06-1.cpp)
add_executable(06-2 06-2.cpp)
add_executable(07-1 07-1.cpp)
add_executable(07-2 07-2.cpp)
add_executable(08 08.cpp)
add_executable(09 09.cpp)
add_executable(10 10.cpp)
add_executable(11 11.cpp)
add_executable(12 12.cpp)