cmake_minimum_required(VERSION 3.24)
project(Chapter10)

set(CMAKE_CXX_STANDARD 17)

add_executable(01 01.cpp)
add_executable(02 02.cpp)
add_executable(03 03.cpp)
add_executable(04 04.cpp)
add_executable(05 05.cpp)
add_executable(06 06.cpp)
add_executable(07 07.cpp)
add_executable(08 08.cpp)
add_executable(09 09.cpp)
add_executable(11 11.cpp)