cmake_minimum_required(VERSION 3.24)
project(Chapter7)

set(CMAKE_CXX_STANDARD 17)

add_executable(1-1 1-1.cpp)
add_executable(1-2 1-2.cpp)
add_executable(2-1 2-1.cpp)
add_executable(2-2 2-2.cpp)
add_executable(3 3.cpp)
add_executable(4 4.cpp)
add_executable(5-1 5-1.cpp)
add_executable(5-2 5-2.cpp)
add_executable(6-1 6-1.cpp)
add_executable(6-2 6-2.cpp)