cmake_minimum_required(VERSION 3.24)
project(Chapter7)

set(CMAKE_CXX_STANDARD 17)

add_executable(1-1 1-1.cpp)
add_executable(1-2 1-2.cpp)
add_executable(2-1 2-1.cpp)
add_executable(2-2 2-2.cpp)
add_executable(3 3.cpp)
add_executable(4 4.cpp)
add_executable(5-1 5-1.cpp)
add_executable(5-2 5-2.cpp)
add_executable(6-1 6-1.cpp)
add_executable(6-2 6-2.cpp)
add_executable(7-1 7-1.cpp)
add_executable(7-2 7-2.cpp)
add_executable(8 8.cpp)
add_executable(9 9.cpp)
add_executable(10 10.cpp)
add_executable(11 11.cpp)
add_executable(12 12.cpp)